feat: create projects and list projects
